src/components/Editor/Runners/PythonRunner/PythonRunner.css
.pythonrunner-container {
  /* margin-right: 20px; */
  display: flex;
  flex-direction: column;

}

.pythonrunner-btn {
  margin: 5px 0;
}

.pythonrunner-canvas-container {
  max-height: 400px;
  min-height: 0px;
}

.pythonrunner-console {
  margin-top: 20px;
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
  max-height: 400px;
  padding-right: 2%;
  overflow-y: auto;
}

.pythonrunner-console-output-line {
  padding-right: 5px;
}

.pythonrunner-input {
  caret-color: black;
  color: rgb(36, 103, 236);
  display: block;
  line-height: 20px;
  padding: 2px 1px 2px 0;
}

.pythonrunner-input:focus {
  outline: 0;
}


.pythonrunner-graphic {
  overflow: auto;
  position: relative;
  display: inline-block;
}

.pythonrunner-controls {
  text-align: right;
}


.proj-button {
  padding: 15px 60px;
  margin:10px 4px;
  color: #cf0374;
  font-family: sans-serif;
  text-transform: uppercase;
  text-align: center;
  position: relative;
  text-decoration: none;
  display:inline-block;
}

.proj-button::before{
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: #000;
  -webkit-transform: scaleX(.3);
  transform: scaleX(.3);
  opacity: 0;
  transition: all .3s
}

.proj-button:hover {
  color: #fff;
}
.proj-button:hover::before{
  opacity: 1;
  color: #fff;
  background-color: #cf0374;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
  transition: -webkit-transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity .4s;
  transition: transform .6s cubic-bezier(.08, .35, .13, 1.02), opacity
}

